custom claim is added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   mdi: null
   video_player: null
   cached_network_image:
+  cloud_functions: ^0.5.0
+
   
 dev_dependencies:
   flutter_test:
